# cfb-rankings

./: README.md  pyproject.toml
data/: schedule_2025.csv
src/rankings/: build.py
