[project]
name = "rankings"
version = "0.1.0"
description = ""
authors = [
    {name = "None"}
]
readme = "README.md"
requires-python = ">=3.12,<3.13"
dependencies = [
    "selenium",
    "beautifulsoup4",
    "pandas"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
